Новое поле sampling
