# app/Http/Controllers/Api/ReportController.php
@@ -133,6 +133,7 @@ class ReportController extends Controller
      *          @OA\Property(property="launch_previously",description="1", type="integer", example="1"),
      *          @OA\Property(property="plan_of_transfer_to_otk",description="1", type="integer", example="1"),
      *          @OA\Property(property="launch_plan_ssz",description="1", type="integer", example="1"),
+     *          @OA\Property(property="sampling",description="1", type="integer", example="1"),
      *          @OA\Property(property="report_day",description="2022-04-01", type="date", example="2022-04-01"),
      *
      *    )
@@ -152,6 +153,7 @@ class ReportController extends Controller
      *          @OA\Property(property="launch_previously",description="1", type="integer", example="1"),
      *          @OA\Property(property="plan_of_transfer_to_otk",description="1", type="integer", example="1"),
      *          @OA\Property(property="launch_plan_ssz",description="1", type="integer", example="1"),
+     *          @OA\Property(property="sampling",description="1", type="integer", example="1"),
      *          @OA\Property(property="report_day",description="2022-04-01", type="date", example="2022-04-01"),
      *         )
      *      ),
@@ -249,6 +251,7 @@ class ReportController extends Controller
      *          @OA\Property(property="launch_previously",description="1", type="integer", example="1"),
      *          @OA\Property(property="plan_of_transfer_to_otk",description="1", type="integer", example="1"),
      *          @OA\Property(property="launch_plan_ssz",description="1", type="integer", example="1"),
+     *          @OA\Property(property="sampling",description="1", type="integer", example="1"),
      *          @OA\Property(property="report_day",description="2022-04-01", type="date", example="2022-04-01"),
      *    )
      * ),
@@ -267,6 +270,7 @@ class ReportController extends Controller
      *          @OA\Property(property="launch_previously",description="1", type="integer", example="1"),
      *          @OA\Property(property="plan_of_transfer_to_otk",description="1", type="integer", example="1"),
      *          @OA\Property(property="launch_plan_ssz",description="1", type="integer", example="1"),
+     *          @OA\Property(property="sampling",description="1", type="integer", example="1"),
      *          @OA\Property(property="report_day",description="2022-04-01", type="date", example="2022-04-01"),
      *
      *         )
